blue/blue-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  labels:
    app: blue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
        - name: blue
          image: nginx:1.19.2
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html/blue
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
      volumes:
        - name: html
          configMap:
            name: blue
            items:
              - key: body
                path: index.html
